fixing layout - spacing for buttons and text

--- a/styles/main.css
+++ b/styles/main.css
@@ -13,6 +13,10 @@ h1 {
   text-align: center;
 }
 
+.non-highlight {
+  margin: 0;
+}
+
 p {
   color: white;
 }
@@ -28,14 +32,26 @@ h5 {
 button {
   display: block;
   position: relative;
-  margin: 2rem;
   justify-content: center;
   align-items: center;
   border-radius: 48px;
+  margin: auto;
 }
 
 button.active {
   font-color: #6290c8;
+}
+
+figure > img {
+  position: relative;
+  align-items: center;
+  justify-content: center;
+  display: block;
+  margin: auto;
+}
+
+figure {
+  margin: 0;
 }
 
 /* Highlight Effect */
@@ -60,7 +76,7 @@ button.active {
 @-webkit-keyframes highlight {
   0% {
     background-position: 100% 100%;
-    color: inherit;
+    color: white;
   }
   to {
     background-position: 0 100%;
@@ -70,7 +86,7 @@ button.active {
 @keyframes highlight {
   0% {
     background-position: 100% 100%;
-    color: inherit;
+    color: white;
   }
   to {
     background-position: 0 100%;
@@ -106,6 +122,11 @@ button.active {
     font-size: 80px;
   }
 
+  p {
+    font-size: 24px;
+    line-height: 1.6;
+  }
+
   section {
     padding: 280px;
     padding-top: 48px;
@@ -114,5 +135,18 @@ button.active {
   button {
     width: 480px;
     height: 60px;
+    margin-bottom: 30px;
+    font-size: 24px;
+  }
+
+  .buttons {
+    padding: 48px;
+  }
+
+  figure > img {
+    max-height: 600px;
+    max-width: 480px;
+    margin-top: 48px;
+    margin-bottom: 60px;
   }
 }
